apps/price-tracker/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: price-tracker-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dev
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - elxreno.me
    secretName: elxreno-me-tls
  rules:
  - host: elxreno.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
